--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CommonJS React Skeleton</title>
+    <title>React Skeleton</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
   </head>
   <body>
+
     <div id="ingredients">
     </div>
+
+    <div id="IDform">
+    </div>
+
+  <script src="js/jquery-1.12.0.min.js"></script>
   <script src="js/main.js"></script>
   </body>
 </html>
