add list-manager skeleton

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
 
-    <div id="ingredients">
+    <div class="container">
+        <div class="row">
+            <div id="cake"></div>
+            <div id="pie"></div>
+            <div id="sushi"></div>
+        </div>
     </div>
 
     <div id="IDform">
