add navBar skeleton

--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,28 @@
     <title>React Skeleton</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-
-    <div class="container">
-        <div class="row">
-            <div id="cake"></div>
-            <div id="pie"></div>
-            <div id="sushi"></div>
-        </div>
+    <div class="row">
+      <div id="nav">
+      </div>
     </div>
 
-    <div id="IDform">
-    </div>
 
-  <script src="js/jquery-1.12.0.min.js"></script>
-  <script src="js/main.js"></script>
+      <div class="container">
+          <div class="row">
+              <div id="cake"></div>
+              <div id="pie"></div>
+              <div id="sushi"></div>
+          </div>
+      </div>
+
+      <div id="IDform">
+      </div>
+
+        <script src="js/jquery-1.12.0.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/main.js"></script>
   </body>
 </html>
