--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="row">
+
+    <div id="main"></div>
+
+    <!-- <div class="row">
       <div id="nav">
       </div>
     </div>
@@ -23,7 +26,7 @@
       </div>
 
       <div id="IDform">
-      </div>
+      </div> -->
 
         <script src="js/jquery-1.12.0.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
